# kickforge

./: .env.example  .gitignore  .pypirc.example  CLAUDE_CODE_BRIEF.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: adapters.md
examples/: cs2_interactive.py  debug_webhook.py  minimal_bot.py  subscribe_events.py  test_webhook_local.py
kickforge_bot/: __init__.py  bot.py  loyalty.py  moderation.py  polls.py  timers.py
kickforge_bot/commands/: __init__.py  builtin.py  handler.py
kickforge_bot/plugins/: __init__.py  base.py
kickforge_clip/: __init__.py  cli.py  clipper.py  detector.py  exporter.py  formatter.py
kickforge_core/: __init__.py  api.py  app.py  auth.py  cli.py  events.py  exceptions.py  oauth_server.py  webhook.py  websocket.py
kickforge_gsi/: __init__.py  bridge.py  cooldown.py  tiers.py
kickforge_gsi/adapters/: __init__.py  base.py  cs2_gsi.py  cs2_rcon.py  generic_http.py  minecraft.py
kickforge_gsi/config/: example_tiers.yaml
kickforge_overlay/: __init__.py
kickforge_overlay/server/: __init__.py  ws_server.py
kickforge_overlay/widgets/: chaos_meter.html  event_feed.html  hype_bar.html  leaderboard.html  prediction.html  velocity.html
scripts/: publish.sh
tests/: conftest.py  test_api.py  test_app.py  test_auth.py  test_bot_commands.py  test_bot_integration.py  test_bridge.py  test_channel_persistence.py  test_cli.py  test_clip_detector.py  test_clipper.py  test_cooldown.py  test_cs2_gsi.py  test_cs2_rcon.py  test_events.py  test_exporter.py  test_generic_http.py  test_loyalty.py  test_moderation.py  test_oauth.py  test_overlay_ws.py  test_plugins.py  test_polls.py  test_tiers.py  test_timers.py  test_webhook.py  test_websocket.py
